# swaggerOutput.json
@@ -20,16 +20,6 @@
                 }
             }
         },
-        "/api-docs": {
-            "get": {
-                "description": "",
-                "responses": {
-                    "default": {
-                        "description": ""
-                    }
-                }
-            }
-        },
         "/contacts/": {
             "get": {
                 "tags": ["Contacts"],
@@ -44,32 +34,6 @@
             "post": {
                 "tags": ["Contacts"],
                 "description": "",
-                "parameters": [
-                    {
-                        "name": "body",
-                        "in": "body",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "firstName": {
-                                    "example": "any"
-                                },
-                                "lastName": {
-                                    "example": "any"
-                                },
-                                "email": {
-                                    "example": "any"
-                                },
-                                "favoriteColor": {
-                                    "example": "any"
-                                },
-                                "birthday": {
-                                    "example": "any"
-                                }
-                            }
-                        }
-                    }
-                ],
                 "responses": {
                     "201": {
                         "description": "Created"
@@ -97,11 +61,11 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created"
+                    "200": {
+                        "description": "OK"
                     },
-                    "500": {
-                        "description": "Internal Server Error"
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             },
@@ -123,11 +87,11 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created"
+                    "200": {
+                        "description": "OK"
                     },
-                    "500": {
-                        "description": "Internal Server Error"
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             },
@@ -149,11 +113,11 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created"
+                    "200": {
+                        "description": "OK"
                     },
-                    "500": {
-                        "description": "Internal Server Error"
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             }
@@ -174,6 +138,12 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             },
@@ -186,38 +156,17 @@
                         "in": "path",
                         "required": true,
                         "type": "string"
-                    },
-                    {
-                        "name": "body",
-                        "in": "body",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "firstName": {
-                                    "example": "any"
-                                },
-                                "lastName": {
-                                    "example": "any"
-                                },
-                                "email": {
-                                    "example": "any"
-                                },
-                                "favoriteColor": {
-                                    "example": "any"
-                                },
-                                "birthday": {
-                                    "example": "any"
-                                }
-                            }
-                        }
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created"
+                    "200": {
+                        "description": "OK"
                     },
-                    "500": {
-                        "description": "Internal Server Error"
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             },
@@ -233,11 +182,17 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created"
+                    "200": {
+                        "description": "OK"
                     },
-                    "500": {
-                        "description": "Internal Server Error"
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "412": {
+                        "description": "Precondition Failed"
                     }
                 }
             },
@@ -253,11 +208,14 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created"
+                    "200": {
+                        "description": "OK"
                     },
-                    "500": {
-                        "description": "Internal Server Error"
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             }
